<resources>
    <string name="app_name">3行日記</string>
    <string name="list_fragment_label">3行日記</string>
    <string name="edit_fragment_label">日記を書く</string>
    <string name="delete_fragment_label">ゴミ箱</string>
    <string name="diary_view">diary view</string>

    <string name="data_str">日付</string>
    <string name="bad_str">今日のダメだったこと</string>
    <string name="good_str">今日の良かったこと</string>
    <string name="goal_str">明日の目標</string>

    <string name="save_str">保存</string>
    <string name="cancel_str">キャンセル</string>
    <string name="delete_str">削除</string>

</resources>
