<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/ListFragment">

    <fragment
        android:id="@+id/ListFragment"
        android:name="com.example.android_three_line_diary.fragment.ListFragment"
        android:label="@string/list_fragment_label"
        tools:layout="@layout/fragment_list">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/EditFragment" />
        <action
            android:id="@+id/action_ListFragment_to_DeleteFragment"
            app:destination="@id/DeleteFragment" />
    </fragment>
    <fragment
        android:id="@+id/EditFragment"
        android:name="com.example.android_three_line_diary.fragment.EditFragment"
        android:label="@string/edit_fragment_label"
        tools:layout="@layout/fragment_edit">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/ListFragment" />
    </fragment>
    <fragment
        android:id="@+id/DeleteFragment"
        android:name="com.example.android_three_line_diary.fragment.DeleteFragment"
        android:label="@string/delete_fragment_label">
        <action
            android:id="@+id/action_DeleteFragment_to_ListFragment"
            app:destination="@id/ListFragment" />
    </fragment>
</navigation>
